<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="#ff000000"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20.0dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:gravity="center_horizontal"
            android:id="@id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/gondereceyinmesaj" />
        <EditText
            android:textColor="#ffffffff"
            android:gravity="center_horizontal"
            android:id="@id/et_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="D'Board"
            android:ems="10"
            android:inputType="textPersonName" />
        <TextView
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:gravity="center_horizontal"
            android:id="@id/tv_count"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/necemesajgondereceksen" />
        <EditText
            android:textColor="#ffffffff"
            android:gravity="center_horizontal"
            android:id="@id/et_count"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="30"
            android:ems="10"
            android:inputType="number" />
        <Button
            android:textColor="#ffffffff"
            android:id="@id/button_use"
            android:background="@drawable/dasqinbtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/istifadeqaydasi"
            android:onClick="htu" />
    </LinearLayout>
</RelativeLayout>